[package]
name = "geolocator"
version = "0.0.2"
description = "Geolocator"
authors = ["Minigrim0"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "path-all", "fs-read-file", "fs-write-file", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.1"
kamadak-exif = "0.5.5"
log = "0.4.21"
env_logger = "0.11.3"
fraction = "0.15.2"
img-parts = "0.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
