[package]
name = "geolocator"
version = "1.0.0"
description = "Geolocator"
authors = ["Minigrim0"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.1"
log = "0.4.21"
env_logger = "0.11.3"
fraction = "0.15.2"
img-parts = "0.3.0"
kamadak-exif = "0.5.5"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
